--- a/practical-5-ex.Rmd
+++ b/practical-5-ex.Rmd
@@ -15,3 +15,11 @@ a)  Answer the following guessing questions, each in its own line:
     1)  How many liters of Beer have been drunken at the Oktoberfest in Munich in 2019? 🍻 7,850,200
     2)  How many people live in Karlsruhe? (Exactly) 🏘️ 313,0928
     3)  What percentage of Americans asked in a survey in 2017, indicated that they believe in Astrology? 🌟 29%
+    
+    ## 3: Putting your Repository on GitHub 🌐
+
+a)  Create a new repository on GitHub in your account named `practical-4`. Make sure you create a **public repository** so we others can see it. Add the link to the repository below:
+
+git@github.com:Loirinho1905/practical-4.git
+
+
